Fix line wrapping in card title

--- a/src/app/card/card.component.css
+++ b/src/app/card/card.component.css
@@ -28,13 +28,13 @@ div.content {
 }
 
 div.content p {
-    margin: 0.4em 0;
+    margin: 0.3em 0;
     width: calc(100% - 2em);
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
 }
 
 .card-sub-title {
     color: gray;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
